--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,22 +22,18 @@ code {
 }
 
 body {
-	background: #eee;
+	background: rgb(61, 60, 60);
 	font-family: Georgia, serif;
 	color: #fff;
 	font-size: 14px;
 }
-#timeline-container{
-  position: relative;
-  width: 100% ;
-}
 
-#timeline-divider{
-  position: absolute;
-  left:50%;
-  width: 1em;
-  height: 100%;
-  background-color: black;
-  margin-left: 20px;
-}
+pre {
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+ }
+
 
